--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
             </section>
 
-            <section id="servise">
-                <h2 class="title">Servise</h2>
+            <section id="skill">
+                <h2 class="title">SKILL</h2>
                 <div class="row">
                     <div class="col-md-6 col-xs-12">
                         <h3>Codeing</h3>
-                        <div class="servise-icon">
+                        <div class="skill-icon">
                             <i class="fas fa-code"></i>
                         </div>
                         <p class="text">
