--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="col-md-6 col-xs-12">
                         <h3>レスポンシブ対応</h3>
-                        <div class="servise-icon">
+                        <div class="skill-icon">
                             <i class="fas fa-mobile"></i>
                         </div>
                         <p class="text">
